add: convert string arrays in objects array, function for line-trough todo-list items, checkmark for it with boolean flag dinamically change for single object

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,18 @@ img {
     cursor: pointer;
 }
 
+.ms_linetrough {
+    text-decoration: line-through;
+}
+
+.ms_highligth {
+    border: 2px solid lightgreen;
+}
+
+.ms_green {
+    color: lightgreen;
+    font-weight: bold;
+}
 /* HEADER */
 
 
