--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,27 @@ img {
     max-width: 100%;
 }
 
+body {
+    background-image: url(../img/bg.jpg);
+    background-size: cover;
+    background-position: top;
+    backdrop-filter: blur(0.5);
+}
+
+#app {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    width: 100%;
+    height: 100vh;
+}
 
 /* UTILITIES */
+.ms_title {
+    color: white;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
 .ms_cursor-pointer {
     cursor: pointer;
 }
@@ -26,13 +45,34 @@ img {
     text-decoration: line-through;
 }
 
-.ms_highligth {
+.ms_highligth-green {
     border: 2px solid lightgreen;
+}
+
+.ms_highligth-red {
+    border: 2px solid orangered;
 }
 
 .ms_green {
     color: lightgreen;
     font-weight: bold;
+}
+
+.ms_red {
+    color: red;
+    font-weight: bold;
+}
+
+.list-group-item {
+    border-radius: inherit;
+}
+
+.list-group-item + .list-group-item {
+    border-top-width: 1px;
+}
+
+.form-control, .list-group {
+    font-style: italic;
 }
 /* HEADER */
 
